관심 직무 수정 및 추가 부분 코드 수정 완료
