# src/config/swagger/jobdictionary.yaml
@@ -130,14 +130,45 @@ paths:
                 isSuccess: false
                 code: 9002
                 message: '최대 한 개의 관심 직무 등록이 가능합니다.'
-        '9003':
-          description: 실패 - 해당 직업은 존재하지 않음
+        '500':
+          description: 실패 - 내부 서버 오류
           content:
             application/json:
               example:
                 isSuccess: false
-                code: 9003
-                message: '해당 직업은 존재하지 않습니다.'
+                code: 500
+                message: '내부 서버 오류'
+
+  /jobguide/interestjobs/{jobname}:
+    put:
+      tags:
+        - jobdictionary
+      summary: 관심 직무 수정
+      operationId: updateInterestJob
+      parameters:
+        - in: path
+          name: jobname
+          required: true
+          description: 수정할 관심 직무 이름
+          schema:
+            type: string
+      responses:
+        '200':
+          description: 성공 - 관심 직무 수정 성공
+          content:
+            application/json:
+              example:
+                isSuccess: true
+                code: 1000
+                message: '관심 직무가 업데이트되었습니다.'
+        '9010':
+          description: 실패 - 관심 직무 수정 실패
+          content:
+            application/json:
+              example:
+                isSuccess: false
+                code: 9008
+                message: '관심 직무를 수정하지 못했습니다.'
         '500':
           description: 실패 - 내부 서버 오류
           content:
